<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/instrumentDetailsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/creditScore"
            style="@style/BodyTextStyle"
            android:layout_gravity="end"
            android:text="Credit: 1000" />


        <ImageView
            android:id="@+id/instrumentImage"
            android:contentDescription="contentDescription"
            style="@style/ImageStyle"
            android:src="@drawable/guitarpic" />


        <TextView
            android:id="@+id/instrumentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HeaderTextStyle"
            android:paddingTop="16dp"
            android:text="Name" />


        <TextView
            android:id="@+id/instrumentDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BodyTextStyle"
            android:paddingTop="8dp"
            android:text="Description" />

        <TextView
            android:id="@+id/instrumentPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BodyTextStyle"
            android:paddingTop="8dp"
            android:text="Credits per month" />

        <RatingBar
            android:id="@+id/instrumentRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="0.5"
            android:isIndicator="true"
            android:paddingTop="8dp" />

        <RadioGroup
            android:id="@+id/instrumentTypeGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="0dp">

            <RadioButton
                android:id="@+id/typeColor1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Color" />

            <RadioButton
                android:id="@+id/typeColor2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Color" />

            <RadioButton
                android:id="@+id/typeColor3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Color" />
        </RadioGroup>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp">


        <Button
            android:id="@+id/borrowButton"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="Borrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nextButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/nextButton"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/borrowButton"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
